fix landing spacing

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -605,8 +605,7 @@ body {
     font-family: "Darker Grotesque", sans-serif;
     font-weight: 600;
     font-size: 8rem;
-    text-align: right;
-    margin-left: 25%; }
+    text-align: right; }
   .landing-background h2, .landing-background h3 {
     text-align: center; }
   .landing-background h2 {
