--- a/public/scss/pages/_landing.scss
+++ b/public/scss/pages/_landing.scss
@@ -15,7 +15,7 @@
         font-weight: 600;
         font-size: 8rem;
         text-align: right;
-        margin-left: 25%;
+        //margin-left: 25%;
     }
 
     h2, h3 {
